[package]
name = "transparent_proxy"
version = "0.1.0"
edition = "2021"
description = "A proxy server to run in front of password-protected socks5 servers to be able to connect to the proxy without password using clients which does not support password auth"
license = "GPL-2.0"
repository = "https://github.com/NikosEfthias/transparent_proxy"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
tap = "1.0.1"
tokio = { version = "1.16.1", features = ["full"] }
